--- a/style.css
+++ b/style.css
@@ -37,17 +37,30 @@ body {
 }
 
 #blue {
-    background: linear-gradient(122deg, rgba(6,147,207,1) 0%, rgba(175,231,255,1) 100%);
+    background-color: #0693cf;
     border: 1px solid black;
 }
 
 #rgb {
-    background: linear-gradient(122deg, rgba(0,255,0,1) 0%, rgba(0,255,245,1) 50%, rgba(27,0,255,1) 100%);
+    background: linear-gradient(
+        135deg,
+        rgba(255, 0, 0, 1) 0%,
+        rgba(255, 154, 0, 1) 10%,
+        rgba(208, 222, 33, 1) 20%,
+        rgba(79, 220, 74, 1) 30%,
+        rgba(63, 218, 216, 1) 40%,
+        rgba(47, 201, 226, 1) 50%,
+        rgba(28, 127, 238, 1) 60%,
+        rgba(95, 21, 242, 1) 70%,
+        rgba(186, 12, 248, 1) 80%,
+        rgba(251, 7, 217, 1) 90%,
+        rgba(255, 0, 0, 1) 100%
+    );
     border: 1px solid black;
 }
 
 #black {
-    background: linear-gradient(122deg, rgba(0,0,0,1) 0%, rgba(210,210,210,1) 100%);
+    background: linear-gradient(135deg, rgba(0,0,0,1) 0%, rgba(210,210,210,1) 100%);
     border: 1px solid black;
 }
 
