--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 html {
-    height: 100%
+    height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 body {
@@ -39,6 +44,10 @@ body {
 #blue {
     background-color: #0693cf;
     border: 1px solid black;
+}
+
+button {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 #rgb {
@@ -81,7 +90,6 @@ body {
     padding: 5px 20px;
     border-radius: 0%;
     border: 1px solid black;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     align-self: center;
 }
 
