--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html {
     height: 100%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: monospace;
 }
 
 h1 {
-    text-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    text-shadow: 5px 5px 0px rgba(0, 0, 0, 0.15);
+    font-size: 48px;
 }
 
 body {
@@ -74,16 +75,8 @@ button {
 }
 
 #remove {
+    background:linear-gradient(135deg,#ffffff 49%,rgb(255, 0, 0) 50%,#ffffff 51%);
     border: 1px solid black;
-}
-
-#remove::after {
-    content: "";
-    position: absolute;
-    border-top: 1px slid red;
-        width: 40px;
-        transform: rotate(45deg);
-        transform-origin: 0% 0%;
 }
 
 #middle-container {
@@ -91,7 +84,7 @@ button {
     flex-direction: column;
     gap: 20px;
     flex: 1;
-
+    align-items: center;
 }
 
 #right-container {
@@ -101,9 +94,15 @@ button {
 
 #clear {
     padding: 5px 20px;
-    border-radius: 0%;
     border: 1px solid black;
     align-self: center;
+    border-radius: 0;
+}
+
+#new {
+    border: 1px solid black;
+    padding: 5px 20px;
+    border-radius: 0;
 }
 
 #grid-container {
@@ -127,6 +126,7 @@ button {
 
 footer {
     text-align: center;
+    font-family:monospace
 }
 
 #name {
@@ -135,4 +135,8 @@ footer {
 
 .blue {
     background-color: #0693cf;
+}
+
+.left-button.onUse {
+    filter: brightness(80%);
 }
