--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ body {
     padding: 10px 20px;
 }
 
-#blue {
-    background-color: #0693cf;
+#anyColour {
     border: 1px solid black;
+    padding: 0;
 }
 
 button {
